feat: implement comprehensive AEO optimizations to boost score from 18/100
feat: implement comprehensive AEO optimizations to boost score from 18/100

- Add dedicated MobileApplication schema for AEO recognition
- Enhance Smart App Banner with app-argument for deep linking
- Add WebSite schema with SearchAction for app store integration
- Implement multiple schema types for comprehensive AEO coverage
- Optimize app store deep linking and mobile app identification

This commit addresses the poor AEO score (18/100) by adding:
- MobileApplication schema specifically for AEO tools
- Enhanced Smart App Banner with proper app-argument
- WebSite schema with search action for app store deep linking
- Multiple complementary schema types for comprehensive coverage

Expected impact: AEO score improvement from 18/100 to 60-80/100 range
Target: Better mobile app recognition and app store integration

Files changed:
- index.html (added MobileApplication schema, enhanced Smart App Banner, added WebSite schema)

Deploy and test AEO score in 24-48 hours for expected improvement.

--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@
     <meta name="bingbot" content="index, follow">
     <link rel="canonical" href="https://ischeduledu.app/">
     
-    <!-- App Store App Site Association -->
+    <!-- App Store Smart App Banner -->
+    <meta name="apple-itunes-app" content="app-id=6504114850, app-argument=https://ischeduledu.app">
     <meta name="apple-itunes-app" content="app-id=6504114850">
     
     <!-- Enhanced SEO tags -->
@@ -173,6 +174,24 @@
     <meta name="geo.region" content="US">
     <meta name="geo.placename" content="United States">
     <meta name="ICBM" content="39.8283, -98.5795">
+
+    <!-- Mobile Application Schema for AEO -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "MobileApplication",
+        "name": "iSchedulEDU",
+        "description": "Emergency schedule generator for teachers - create equal time schedules in under 2 minutes",
+        "applicationCategory": "EducationApplication",
+        "operatingSystem": "iOS",
+        "url": "https://apps.apple.com/us/app/ischeduledu/id6504114850",
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "USD"
+        }
+      }
+    </script>
 
     <!-- JSON-LD Structured Data - Enhanced -->
     <script type="application/ld+json">
@@ -291,6 +310,25 @@
           "name": "Home",
           "item": "https://ischeduledu.app/"
         }]
+      }
+    </script>
+
+    <!-- WebSite Schema with Search Action for App Store Deep Linking -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "iSchedulEDU",
+        "url": "https://ischeduledu.app",
+        "description": "Emergency schedule generator for teachers",
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": {
+            "@type": "EntryPoint",
+            "urlTemplate": "https://apps.apple.com/us/app/ischeduledu/id6504114850"
+          },
+          "query-input": "required name=app"
+        }
       }
     </script>
 
