fixed breadcrumb header and footer on pages
fixed breadcrumb navigation and added footers to each page. also fixed missing related content component on the blog page

--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
         "description": "Create custom school schedules in under 2 minutes with iSchedulEDU. Handle A/B rotations, early dismissals, delays, and emergency schedule changes instantly. Trusted by teachers worldwide. Free to start - download now!",
         "url": "https://ischeduledu.app",
         "screenshot": "https://ischeduledu.app/lovable-uploads/6bccc818-bd50-4f4a-ad6e-ebf8c4736a68.png",
+        "image": "https://toolbox.marketingtools.apple.com/api/v2/badges/download-on-the-app-store/black/en-us?releaseDate=1718150400",
         "offers": {
           "@type": "Offer",
           "price": "0",
@@ -219,6 +220,53 @@
           "bestRating": "5",
           "worstRating": "1"
         },
+        "review": [
+          {
+            "@type": "Review",
+            "author": {
+              "@type": "Person",
+              "name": "Llos123"
+            },
+            "reviewRating": {
+              "@type": "Rating",
+              "ratingValue": "5",
+              "bestRating": "5",
+              "worstRating": "1"
+            },
+            "reviewBody": "This is going to make schedule modifications so easy!",
+            "datePublished": "2024-01-15"
+          },
+          {
+            "@type": "Review",
+            "author": {
+              "@type": "Person",
+              "name": "momma30000000"
+            },
+            "reviewRating": {
+              "@type": "Rating",
+              "ratingValue": "5",
+              "bestRating": "5",
+              "worstRating": "1"
+            },
+            "reviewBody": "The app is so easy to use and so helpful to instantly create abbreviated schedules in a few taps! It would be helpful for all educators!",
+            "datePublished": "2024-02-15"
+          },
+          {
+            "@type": "Review",
+            "author": {
+              "@type": "Person",
+              "name": "Brooke0315w"
+            },
+            "reviewRating": {
+              "@type": "Rating",
+              "ratingValue": "5",
+              "bestRating": "5",
+              "worstRating": "1"
+            },
+            "reviewBody": "As a teacher, schedule disruptions are inevitable—whether it's an assembly, a special program, or testing, something always seems to throw off our regular routine. I would normally manually adjust our schedule on paper, making sure time was divided equally among four classes. But I can do it much more quickly with the app. The interface is user-friendly, allowing me to quickly input available time and the number of classes, and it automatically generates an alternate schedule that makes sense for everyone. I highly recommend for teachers juggling multiple classes and frequent schedule changes!",
+            "datePublished": "2024-08-15"
+          }
+        ],
         "creator": {
           "@type": "Organization",
           "name": "iSchedulEDU",
@@ -328,6 +376,34 @@
             "urlTemplate": "https://apps.apple.com/us/app/ischeduledu/id6504114850"
           },
           "query-input": "required name=app"
+        }
+      }
+    </script>
+
+    <!-- App Store Deep Link Schema -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "MobileApplication",
+        "name": "iSchedulEDU",
+        "description": "Emergency schedule generator for teachers",
+        "applicationCategory": "EducationApplication",
+        "operatingSystem": "iOS",
+        "url": "https://ischeduledu.app",
+        "downloadUrl": "https://apps.apple.com/us/app/ischeduledu/id6504114850",
+        "installUrl": "https://apps.apple.com/us/app/ischeduledu/id6504114850",
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "USD",
+          "availability": "https://schema.org/InStock"
+        },
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "5",
+          "ratingCount": "171",
+          "bestRating": "5",
+          "worstRating": "1"
         }
       }
     </script>
