feat: Implement comprehensive AEO optimizations and SEO improvements
feat: Implement comprehensive AEO optimizations and SEO improvements

## AEO (AI Engine Optimization) Improvements
- Add AI-specific meta tags for better AI engine recognition
- Improve content readability with structured, AI-friendly content
- Add comprehensive app categorization and feature descriptions
- Enhance schema markup for AI understanding
- Target AEO score improvement from 50/100 to 70-80/100

## SEO Optimizations
- Fix meta description length (reduced from 218 to 155 characters)
- Enhance title with keywords: "Teacher Schedule App | Emergency Schedule Generator | Equal Time Lesson Planning"
- Expand keywords meta tag with additional educational terms
- Update Open Graph tags for consistency
- Add relevant external links to CompetitorAnalysis and StrategyReview pages
- Remove irrelevant educational resource links from StorySection

## Navigation Improvements
- Add BackToTop component to all pages for better user experience
- Add Footer component to missing pages (PrivacyPolicy, ImportSchedule, BlogPost)
- Ensure consistent navigation across all pages
- Remove awkward internal links from Header component (footer links suffice for SEO)

## Technical Enhancements
- Create reusable BackToTop component with smooth scrolling
- Implement proper dark mode styling across all pages
- Add comprehensive internal linking through footer navigation
- Maintain clean user experience while optimizing for search engines

## AI-Specific Meta Tags Added
- ai-crawler-friendly: true
- ai-content-type: educational-technology-app
- ai-target-audience: teachers, educators, school administrators
- ai-app-category: education, productivity, scheduling
- ai-features: emergency scheduling, equal time planning, QR code sharing, universal links, notifications, custom schedules
- ai-use-cases: fire drills, weather delays, assemblies, substitute teachers, early dismissals, schedule changes
- ai-platform: iOS, iPadOS
- ai

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
     </script>
 
     <!-- Primary Meta Tags -->
-    <title>iSchedulEDU - School Schedule Generator App | Create Schedules in 2 Minutes</title>
-    <meta name="title" content="iSchedulEDU - School Schedule Generator App | Create Schedules in 2 Minutes">
-    <meta name="description" content="Create custom school schedules in under 2 minutes with iSchedulEDU. Handle A/B rotations, early dismissals, delays, and emergency schedule changes instantly. Trusted by teachers worldwide. Free to start - download now!">
-    <meta name="keywords" content="school schedule maker, education schedule generator, teacher scheduling app, A/B schedule rotation, class schedule creator, school timetable app, education planner, schedule notifications, QR code sharing, teacher tools, education software, iOS scheduling app, iPadOS scheduling, abbreviated schedule, custom schedule, daily schedule, bell schedule, period schedule, classroom schedule, academic schedule, school day planner, emergency schedule, early dismissal schedule, delay schedule, teacher app, education technology">
+    <title>iSchedulEDU - Teacher Schedule App | Emergency Schedule Generator | Equal Time Lesson Planning</title>
+    <meta name="title" content="iSchedulEDU - Teacher Schedule App | Emergency Schedule Generator | Equal Time Lesson Planning">
+    <meta name="description" content="Create emergency schedules and equal time lesson plans in under 2 minutes. Perfect for fire drills, assemblies, weather delays, and substitute teachers. Free to start.">
+    <meta name="keywords" content="teacher schedule app, emergency schedule generator, equal time lesson planning, fire drill schedule, substitute teacher schedule, classroom scheduling app, school schedule generator, lesson planning app, teacher tools, educational technology, classroom management">
     
     <!-- Euclid Circular B Font -->
     <style>
@@ -98,6 +98,19 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="iSchedulEDU">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    
+    <!-- AI Engine Optimization Meta Tags -->
+    <meta name="ai-crawler-friendly" content="true">
+    <meta name="ai-content-type" content="educational-technology-app">
+    <meta name="ai-target-audience" content="teachers, educators, school administrators">
+    <meta name="ai-app-category" content="education, productivity, scheduling">
+    <meta name="ai-features" content="emergency scheduling, equal time planning, QR code sharing, universal links, notifications, custom schedules">
+    <meta name="ai-use-cases" content="fire drills, weather delays, assemblies, substitute teachers, early dismissals, schedule changes">
+    <meta name="ai-platform" content="iOS, iPadOS">
+    <meta name="ai-pricing" content="free to start, $4.99 one-time purchase">
+    <meta name="ai-rating" content="5.0 stars">
+    <meta name="ai-downloads" content="thousands of teachers">
+    <meta name="ai-last-updated" content="2025-07-28">
     <meta name="format-detection" content="telephone=no">
     <meta name="copyright" content="iSchedulEDU">
     <meta name="rating" content="General">
