--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
     </script>
 
     <!-- Primary Meta Tags -->
-    <title>iSchedulEDU - Teacher Schedule App | Emergency Schedule Generator | Equal Time Lesson Planning</title>
-    <meta name="title" content="iSchedulEDU - Teacher Schedule App | Emergency Schedule Generator | Equal Time Lesson Planning">
-    <meta name="description" content="Create emergency schedules and equal time lesson plans in under 2 minutes. Perfect for fire drills, assemblies, weather delays, and substitute teachers. Free to start.">
+    <title>iSchedulEDU - Emergency Schedule Generator for Teachers</title>
+    <meta name="title" content="iSchedulEDU - Emergency Schedule Generator for Teachers">
+    <meta name="description" content="Create emergency schedules in under 2 minutes. Perfect for fire drills, weather delays, and substitute teachers. Free to start.">
     <meta name="keywords" content="teacher schedule app, emergency schedule generator, equal time lesson planning, fire drill schedule, substitute teacher schedule, classroom scheduling app, school schedule generator, lesson planning app, teacher tools, educational technology, classroom management">
     
     <!-- Euclid Circular B Font -->
@@ -127,8 +127,8 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://ischeduledu.app/">
-    <meta property="og:title" content="iSchedulEDU - School Schedule Generator App | Create Schedules in 2 Minutes">
-    <meta property="og:description" content="Create custom school schedules in under 2 minutes with iSchedulEDU. Handle A/B rotations, early dismissals, delays, and emergency schedule changes instantly. Trusted by teachers worldwide. Free to start - download now!">
+    <meta property="og:title" content="iSchedulEDU - Emergency Schedule Generator for Teachers">
+    <meta property="og:description" content="Create emergency schedules in under 2 minutes. Perfect for fire drills, weather delays, and substitute teachers. Free to start.">
     <meta property="og:image" content="https://ischeduledu.app/lovable-uploads/6bccc818-bd50-4f4a-ad6e-ebf8c4736a68.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -139,8 +139,8 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://ischeduledu.app/">
-    <meta property="twitter:title" content="iSchedulEDU - School Schedule Generator App | Create Schedules in 2 Minutes">
-    <meta property="twitter:description" content="Create custom school schedules in under 2 minutes with iSchedulEDU. Handle A/B rotations, early dismissals, delays, and emergency schedule changes instantly. Trusted by teachers worldwide. Free to start - download now!">
+    <meta property="twitter:title" content="iSchedulEDU - Emergency Schedule Generator for Teachers">
+    <meta property="twitter:description" content="Create emergency schedules in under 2 minutes. Perfect for fire drills, weather delays, and substitute teachers. Free to start.">
     <meta property="twitter:image" content="https://ischeduledu.app/lovable-uploads/6bccc818-bd50-4f4a-ad6e-ebf8c4736a68.png">
     <meta property="twitter:image:alt" content="iSchedulEDU App Logo - School Schedule Generator for Teachers">
     <meta name="twitter:creator" content="@ischeduledu">
