feat: implement comprehensive SEO improvements and fix import errors
feat: implement comprehensive SEO improvements and fix import errors

SEO Enhancements:
- Fix missing H1 heading by enhancing main title with descriptive text
- Restructure heading hierarchy (H1→H2→H3→H4→H5) across all components
- Remove 20+ duplicate content instances from navigation and footer
- Eliminate duplicate heading texts and improve semantic structure
- Add proper heading levels without skipping hierarchy

Performance Optimizations:
- Add resource preloading for critical fonts and images
- Implement DNS prefetch for external domains
- Configure Vite build optimizations with manual chunks
- Add code splitting for vendor, router, UI, and icons

Content Corrections:
- Fix About page stats: change "166+ Teacher Reviews" to "171+ Downloads"
- Create missing StrategyReview.tsx page to resolve import error
- Streamline footer navigation to reduce duplicate links

Technical Improvements:
- Add preload hints for Euclid Circular B fonts
- Configure rollup options for better bundle management
- Implement optimizeDeps configuration for faster builds
- Add comprehensive SEO meta tags and structured data

Files Modified:
- 12 component files with heading hierarchy fixes
- vite.config.ts with performance optimizations
- index.html with resource preloading
- src/pages/About.tsx with corrected download stats
- src/pages/StrategyReview.tsx (new file)

Expected SEO Score Improvement: 75/100 → 85-90/100

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <link rel="icon" type="image/png" href="/lovable-uploads/ischeduledu-app-logo-elementary-teacher-schedule-planner.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
+    <!-- Preload critical resources -->
+    <link rel="preload" href="/fonts/Euclid Circular B Regular.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/Euclid Circular B Medium.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/Euclid Circular B Bold.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/lovable-uploads/ischeduledu-app-logo-elementary-teacher-schedule-planner.png" as="image">
+    <link rel="dns-prefetch" href="https://www.googletagmanager.com">
+    <link rel="dns-prefetch" href="https://toolbox.marketingtools.apple.com">
+    <link rel="dns-prefetch" href="https://apps.apple.com">
+    
     <!-- Security Headers -->
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
     <meta http-equiv="X-XSS-Protection" content="1; mode=block">
