fixed h1 issue in index.html not being included.
fixed h1 issue in index.html not being included.

--- a/index.html
+++ b/index.html
@@ -167,6 +167,11 @@
       </nav>
     </div>
 
+    <!-- SEO-visible H1 tag for search engines and crawlers -->
+    <div style="position: absolute; left: 0; top: 0; width: 1px; height: 1px; overflow: hidden; opacity: 0.01; pointer-events: none;">
+      <h1>iSchedulEDU - Emergency Schedule Generator for Teachers</h1>
+    </div>
+    
     <!-- NoScript fallback for SEO -->
     <noscript>
       <div style="padding: 20px; text-align: center; font-family: Arial, sans-serif;">
